Fixup machine conf

--- a/conf/machine/logicpd.conf
+++ b/conf/machine/logicpd.conf
@@ -18,10 +18,11 @@ PREFERRED_PROVIDER_u-boot = "u-boot"
 UBOOT_ENTRYPOINT = "0x80008000"
 UBOOT_LOADADDRESS = "0x80008000"
 UBOOT_MACHINE = "omap3_logic_config"
+#UBOOT_MACHINE = "omap3_logic_somlv_config"
 
-EXTRA_IMAGEDEPENDS += "u-boot"
+EXTRA_IMAGEDEPENDS += "u-boot u-boot-scr"
 
-SERIAL_CONSOLES = "115200;ttyO2"
+SERIAL_CONSOLES = "115200;ttyO0"
 
 IMAGE_FSTYPES = "tar.xz"
 
